New minimal design

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Analysis of data on CO&#8322; levels sicne 1958"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:500,700i|Source+Sans+Pro:900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700i|Montserrat:900&display=swap" rel="stylesheet">
     <title>CO&#8322;</title>
   </head>
   <body>
