--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#f9a21f">
     <meta name="msapplication-TileColor" content="#ffc40d">
     <meta name="theme-color" content="#ffffff" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700i|Montserrat:900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700|Roboto+Condensed:700&display=swap" rel="stylesheet">
     <title>CO&#8322;</title>
   </head>
   <body>
